# MeshPartition

./: .gitignore  MeshPartition.sln  README.md
MeshPartition/: CMakeLists.txt  MeshPartition.vcxproj  MeshPartition.vcxproj.filters  clusters.txt  covariance.cpp  covariance.h  main.cpp  mesh_partition.cpp  mesh_partition.h  qemquadrics.cpp  qemquadrics.h
MeshPartition/include/heap/: MxBlock.h  MxDynBlock.h  MxHeap.h
MeshPartition/x64/Debug/: vc120.idb
